--- a/user/data/gantry5/themes/g5_helium/config/menu/mainmenu.yaml
+++ b/user/data/gantry5/themes/g5_helium/config/menu/mainmenu.yaml
@@ -1,15 +1,101 @@
-title: 'Helium Theme'
-description: 'Sample menu for Helium theme.'
-items:
+settings:
+  title: Mainmenu
+ordering:
+  home: ''
+  features:
+    particles: ''
+    block-variations: ''
+    typography: ''
+    documentation: ''
+    download: ''
+  pages:
+    modular: ''
+    blog: ''
+    error: ''
+    offline-page: ''
+  sample-layouts:
+    full-width: ''
+    left-sidebar: ''
+    right-sidebar: ''
+    two-sidebars: ''
+    two-sidebars-left: ''
+    two-sidebars-right: ''
+    rows-columns: ''
   styles:
-    type: separator
+    __particle-2IjaB: ''
+items:
+  home:
+    enabled: true
+    anchor_class: ''
+  features:
+    enabled: '0'
+    dropdown_dir: right
+    dropdown_hide: '0'
+    width: auto
+  features/particles:
+    enabled: true
+    anchor_class: ''
+  features/block-variations:
+    enabled: true
+    anchor_class: ''
+  features/typography:
+    enabled: true
+    anchor_class: ''
+  features/documentation:
+    enabled: true
+    anchor_class: ''
+  features/download:
+    enabled: true
+    anchor_class: ''
+  pages:
+    enabled: '0'
+    dropdown_dir: right
+    dropdown_hide: '0'
+    width: auto
+  pages/modular:
+    enabled: true
+    anchor_class: ''
+  pages/blog:
+    enabled: true
+    anchor_class: ''
+  pages/error:
+    enabled: true
+    anchor_class: ''
+  pages/offline-page:
+    enabled: true
+    anchor_class: ''
+  sample-layouts:
+    enabled: '0'
+    dropdown_dir: right
+    dropdown_hide: '0'
+    width: auto
+  sample-layouts/full-width:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/left-sidebar:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/right-sidebar:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/two-sidebars:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/two-sidebars-left:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/two-sidebars-right:
+    enabled: true
+    anchor_class: ''
+  sample-layouts/rows-columns:
+    enabled: true
+    anchor_class: ''
+  styles:
+    enabled: '0'
     dropdown: standard
     dropdown_dir: center
     dropdown_hide: '0'
     width: 35rem
-    columns:
-      - 100
-    title: Styles
   styles/__particle-2IjaB:
     type: particle
     particle: custom
@@ -20,4 +106,5 @@ items:
         html: "<div class=\"g-grid g-preset-thumbnails center\">\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset1\">\n                <img src=\"gantry-media://styles/preset1.png\" alt=\"Preset 1\">\n                <br />\n                <span>Preset 1</span>\n            </a>\n        </div>\n    </div>\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset2\">\n                <img src=\"gantry-media://styles/preset2.png\" alt=\"Preset 2\">\n                <br />\n                <span>Preset 2</span>\n            </a>\n        </div>\n    </div>\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset3\">\n                <img src=\"gantry-media://styles/preset3.png\" alt=\"Preset 3\">\n                <br />\n                <span>Preset 3</span>\n            </a>\n        </div>\n    </div>\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset4\">\n                <img src=\"gantry-media://styles/preset4.png\" alt=\"Preset 4\">\n                <br />\n                <span>Preset 4</span>\n            </a>\n        </div>\n    </div>\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset5\">\n                <img src=\"gantry-media://styles/preset5.png\" alt=\"Preset 5\">\n                <br />\n                <span>Preset 5</span>\n            </a>\n        </div>\n    </div>\n    <div class=\"g-block\">\n        <div class=\"g-content\">\n            <a href=\"?presets=preset6\">\n                <img src=\"gantry-media://styles/preset6.png\" alt=\"Preset 6\">\n                <br />\n                <span>Preset 6</span>\n            </a>\n        </div>\n    </div>    \n</div>"
       block:
         extra: {  }
-
+    enabled: true
+    anchor_class: ''
